fortify added